fixed image distortion

--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -67,7 +67,6 @@ body {
   display: inline-block;
   float: left;
   padding-right: 10px;
-  width: 200px;
 }
 
 #page.company #name {
